tests/baselines/reference/invalidForInBreakStatements.errors.txt
invalidForInBreakStatements.ts(4,1): error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.
invalidForInBreakStatements.ts(8,19): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
invalidForInBreakStatements.ts(14,9): error TS1107: Jump target cannot cross function boundary.
invalidForInBreakStatements.ts(21,9): error TS1107: Jump target cannot cross function boundary.
invalidForInBreakStatements.ts(27,5): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
invalidForInBreakStatements.ts(33,1): error TS1344: 'A label is not allowed here.
invalidForInBreakStatements.ts(37,5): error TS1116: A 'break' statement can only jump to a label of an enclosing statement.


==== invalidForInBreakStatements.ts (7 errors) ====
    // All errors
    
    // naked break not allowed
    break;
    ~~~~~~
!!! error TS1105: A 'break' statement can only be used within an enclosing iteration or switch statement.
    
    // non-existent label
    ONE:
    for (var x in {}) break TWO;
                      ~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    
    // break from inside function
    TWO:
    for (var x in {}) {
        var fn = () => {
            break TWO;
            ~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
    }
    
    THREE:
    for (var x in {}) {
        var fn = function () {
            break THREE;
            ~~~~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
    }
    
    // break forward
    for (var x in {}) {
        break FIVE;
        ~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
        FIVE:
        for (var x in {}) { }
    }
    
    // label on non-loop statement
    NINE:
    ~~~~
!!! error TS1344: 'A label is not allowed here.
    var y = 12;
    
    for (var x in {}) {
        break NINE;
        ~~~~~~~~~~~
!!! error TS1116: A 'break' statement can only jump to a label of an enclosing statement.
    }